--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,8 @@
 {
-  "name": "jjplaying/password",
+  "name": "jarne/password",
   "description": "a simple library to generate passwords",
   "type": "library",
   "license": "Creative Commons Attribution-ShareAlike 4.0",
-  "authors": [
-    {
-      "name": "Jarne",
-      "email": "jarne@surva.net"
-    }
-  ],
   "autoload": {
     "psr-0": {
       "jjplaying\\password": "src/"
