Updated license in composer file

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "vowels"
   ],
   "homepage": "https://github.com/jarne/password",
-  "license": "CC-BY-SA-4.0",
+  "license": "MIT",
   "authors": [
     {
       "name": "Jarne",
