--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,11 @@
     "php": ">=7.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.2"
+    "phpunit/phpunit": "^9.5"
   },
   "autoload": {
-    "psr-0": {
-      "jarne\\password": "src/"
+    "psr-4": {
+      "jarne\\password\\": "src/jarne/password/"
     }
   }
 }
