--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,46 @@
 {
-  "name": "jarne/password",
-  "description": "A simple library to generate passwords",
-  "version": "1.3.3",
-  "type": "library",
-  "keywords": [
-    "password",
-    "generate",
-    "library",
-    "characters",
-    "vowels"
-  ],
-  "homepage": "https://github.com/jarne/password",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Jarne",
-      "homepage": "https://github.com/jarne",
-      "role": "Developer"
+    "name": "jarne/password",
+    "description": "A simple library to generate passwords",
+    "version": "1.3.3",
+    "type": "library",
+    "keywords": [
+        "password",
+        "generate",
+        "library",
+        "characters",
+        "vowels"
+    ],
+    "homepage": "https://github.com/jarne/password",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Jarne",
+            "homepage": "https://github.com/jarne",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/jarne/password/issues",
+        "source": "https://github.com/jarne/password"
+    },
+    "require": {
+        "php": ">=7.2"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.8",
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7"
+    },
+    "autoload": {
+        "psr-4": {
+            "jarne\\password\\": "src/jarne/password/"
+        }
+    },
+    "scripts": {
+        "code-analyze": "./vendor/bin/phpstan analyze -l 3 src tests",
+        "code-analyze-save-report": "./vendor/bin/phpstan analyze -l 3 --error-format junit src tests > test-results/phpstan-result/junit.xml",
+        "check-format": "./vendor/bin/phpcs --standard=PSR12 src tests",
+        "check-format-save-report": "./vendor/bin/phpcs --standard=PSR12 -n --report=junit src tests > test-results/phpcs-result/junit.xml",
+        "fix-format": "./vendor/bin/phpcbf --standard=PSR12 src tests"
     }
-  ],
-  "support": {
-    "issues": "https://github.com/jarne/password/issues",
-    "source": "https://github.com/jarne/password"
-  },
-  "require": {
-    "php": ">=7.2"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5"
-  },
-  "autoload": {
-    "psr-4": {
-      "jarne\\password\\": "src/jarne/password/"
-    }
-  }
 }
